hasadnaa/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hasadnaa
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  labels:
    app.kubernetes.io/name: hasadnaa
